--- a/src/Home/SpaceMgt.css
+++ b/src/Home/SpaceMgt.css
@@ -59,3 +59,66 @@
     50% { opacity: 1; transform: translateX(0px); }
     100% { opacity: 0; transform: translateX(50px); }
 }
+
+.animated-line {
+    animation: slideRight 1s ease forwards; /* Adjust duration and timing function as needed */
+  }
+  
+  /* Define the keyframes for the animation */
+  @keyframes slideRight {
+    0% {
+      width: 0%;
+    }
+    100% {
+      width: 70%; /* Width of the line when fully animated */
+    }
+  }
+
+  @font-face {
+    font-family: "Gotham Pro-Normal-EO0rZg56";
+    src: url('../Fonts/gothampro.woff') format('woff');
+  }
+  .easily{
+    background-color: rgb(219, 241, 243);
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    font-family: "Gotham Pro-Normal-EO0rZg56";
+    text-align: left;
+    line-height: 22px;
+  }
+
+  @media (max-width: 500px) {
+    .easily {
+        font-size: 11px;
+        line-height: 11px;
+    }
+}
+
+@font-face {
+    font-family: "Gotham Pro-Normal-EO0rZg56";
+    src: url('../Fonts/gothampro.woff') format('woff');
+  }
+  .computerText{
+    background-color: rgb(219, 241, 243);
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    font-family: "Gotham Pro-Normal-EO0rZg56";
+    text-align: left;
+    line-height: 22px;
+  }
+
+  @media (max-width: 500px) {
+    .computerText {
+        font-size: 11px;
+        line-height: 11px;
+    }
+}
+
+  
+
+  
+  
