--- a/src/Home/Integrations.css
+++ b/src/Home/Integrations.css
@@ -47,9 +47,16 @@
     font-size: 24px;
     color: rgb(0, 0, 0);
     font-family: "Gotham Pro-Normal-EO0rZg56";
-    text-align: left;
     line-height: 38px;
 }
+
+@media (max-width:450px) {
+    .quote{
+        font-size: 10px;
+        line-height: normal;
+    }  
+}
+
 
 @font-face {
     font-family: "Gotham Bold-Normal-NOG2AmOs";
@@ -63,6 +70,18 @@
     font-family: "Gotham Bold-Normal-NOG2AmOs";
     text-align: left;
     line-height: 38px;
+}
+
+
+@media (max-width:320) {
+    .name{
+        font-size: 15px;
+        line-height: normal;
+    }
+    .desg{
+        font-size: 15px;
+        line-height: normal;
+    }
 }
 
 @font-face {
