--- a/src/Home/SpaceMgt.css
+++ b/src/Home/SpaceMgt.css
@@ -22,7 +22,6 @@
     font-style: normal;
     font-size: 14px;
     color: rgb(0, 0, 0);
-    z-index: 86;
     transition-property: none;
     font-family: "Gotham Book-Italic-998JD7Yk";
     line-height: 26px;
@@ -112,7 +111,14 @@
         font-size: 11px;
         line-height: 11px;
         padding: 8px;
+        left: 30%;
     }
+}
+
+@media (max-width: 300px) {
+  .easily {
+      left: 70% ;
+  }
 }
 
 @font-face {
@@ -153,7 +159,14 @@
         font-size: 11px;
         line-height: 11px;
         padding: 8px;
+        left: 30%;
     }
+}
+
+@media (max-width: 300px) {
+  .computerText {
+      left: 70%;
+  }
 }
 
   
