--- a/src/Home/Inquire.css
+++ b/src/Home/Inquire.css
@@ -1,8 +1,9 @@
 @font-face {
-    font-family:"Gotham Pro-Bold-BTN8n6eV" ;
+    font-family: "Gotham Pro-Bold-BTN8n6eV";
     src: url('../Fonts/gothampro-bold.woff') format('woff');
 }
-.platform{
+
+.platform {
     font-weight: 400;
     font-style: normal;
     font-size: 36px;
@@ -12,16 +13,71 @@
     line-height: 46px;
 }
 
+@media (max-width:390px) {
+    .platform {
+
+        font-size: 20px;
+        line-height: normal;
+    }
+}
+
 @font-face {
-    font-family: "Gotham Pro-Normal-EO0rZg56" ;
+    font-family: "Gotham Pro-Normal-EO0rZg56";
     src: url('../Fonts/gothampro.woff') format('woff');
 }
-.Contactus{
+
+.Contactus {
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
     color: rgb(0, 0, 0);
     font-family: "Gotham Pro-Normal-EO0rZg56";
-    /* text-align: left; */
     line-height: 26px;
+}
+
+/* color for button */
+.bg-rgb-15-103-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(15, 103, 100, var(--tw-bg-opacity));
+}
+
+/* .border-rgb-15-103-100 {
+    --tw-border-opacity: 1;
+    border-color: rgba(15, 103, 100, var(--tw-border-opacity)) !important;
+} */
+
+.btn {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    font-family: "Gotham Pro-Bold-BTN8n6eV";
+    line-height: 26px;
+}
+
+.inquireImage {
+    mask-size: 100% !important;
+    margin-top: -2rem !important;
+    z-index: -1;
+    position: relative;
+    margin-left: 3rem;
+}
+
+@media (max-width:1000px) {
+    .inquireImage {
+        mask-size: 100% 100% !important;
+        margin-top: auto !important;
+    }
+
+}
+
+@media (max-width:380px) {
+    .btn {
+        font-size: 10px;
+    }
+}
+
+@media (max-width:334px) {
+    .btn {
+        font-size: 5px;
+    }
 }
