--- a/src/Home/QuadReal.css
+++ b/src/Home/QuadReal.css
@@ -11,6 +11,14 @@
     line-height: 55px;
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+}
+
+@media (max-width:350px) {
+    .workplace{
+    font-size: 25px;
+    line-height: normal;
+    }
 }
 
 @font-face {
@@ -105,4 +113,23 @@
     0% { opacity: 0; transform: translateY(10px); }
     80% { opacity: 1; transform: translateY(50px); }
     100% { opacity: 0; transform: translateY(50px); }
+}
+
+.imageOverflow{
+    margin-left: 10%; 
+}
+
+@media (max-width:990px) {
+    .imageOverflow{
+        margin-left: 0%;
+    }
+}
+
+
+.css-mhc70k-MuiGrid-root>.MuiGrid-item {
+    padding-left: 0px !important;
+}
+
+.mgtImg{
+    mix-blend-mode: normal;
 }
