--- a/src/Home/ReportingAnalytics.css
+++ b/src/Home/ReportingAnalytics.css
@@ -45,3 +45,10 @@
   .card-root:hover {
     transform: translateY(-10px);
   }
+
+  .reportSVG{
+    right: -85%;
+    top: -25%;
+    position:relative;
+    z-index:-1;
+  }
