--- a/src/Home/BookingDemo.css
+++ b/src/Home/BookingDemo.css
@@ -106,3 +106,28 @@
         line-height: normal;
      }
   }
+
+  .container.demo-started .image-stack__item--bottom img {
+    filter: brightness(70%);
+  }
+
+   .image-stack__item--bottom {
+    position: relative;
+  }
+  
+  .overlay-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } 
+  
+  .MuiTooltip-popper[data-popper-placement*="right"] .css-1k51tf5-MuiTooltip-tooltip {
+    transform-origin: right center;
+    margin-left: -190% !important;
+    margin-top: -88% !important;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    /* padding: 1rem; */
+}
