--- a/src/Home/Inquire.css
+++ b/src/Home/Inquire.css
@@ -63,7 +63,7 @@
     margin-top: -2rem !important;
     z-index: -1;
     position: relative;
-    margin-left: 3rem;
+    
 }
 
 @media (max-width:1000px) {
@@ -83,5 +83,14 @@
 @media (max-width:334px) {
     .btn {
         font-size: 5px;
+    }
+}
+
+.textAlignCss{
+    padding: 2% 10% 0 0;
+}
+@media (max-width:460px) {
+    .textAlignCss{
+        padding: 0 ;
     }
 }
