--- a/src/Home/ReportingAnalytics.css
+++ b/src/Home/ReportingAnalytics.css
@@ -52,3 +52,16 @@
     position:relative;
     z-index:-1;
   }
+
+  .reporting-analytics-container {
+    max-height: 600px;
+    /* overflow-y: auto;  */
+  }
+  
+  
+  @media (max-width: 900px) {
+    .reporting-analytics-container {
+      max-height: none; 
+      height: auto;
+    }
+  }
